micro-office/docs/versions/V1.1.12/frontend.md
# V1.1.12 前端拆解

## 1. 目标

- 新增独立“节点设计”页面。
- 将工作流设计页改为只消费和提交 `nodeGraph`。
- 彻底移除“工作流页同时定义节点”的旧交互。

## 2. 本线程要做的事

### 2.1 节点设计页

- 新增独立后台入口：
  - `节点设计`
- 页面职责：
  - 节点列表
  - 新建节点
  - 编辑节点基础信息
  - 输入字段配置
  - 输出字段配置
  - 推荐模板配置
  - 启停状态

要求：

- 节点设计页不出现“所属工作流”“引用工作流”等工作流编排概念

### 2.2 工作流设计页

- 工作流页中的“添加节点”改为“从节点库中选择”
- 选择结果写入前端本地的 `nodeGraph` 结构
- 页面保存时只提交 `nodeGraph`

标准结构：

```json
[
  ["nodeid1"],
  ["nodeid2"],
  ["nodeid3", "nodeid4"],
  ["nodeid5"]
]
```

### 2.3 画布渲染

前端画布需要按 `nodeGraph` 表达：

- 外层数组顺序渲染层级
- 内层单元素数组渲染串行节点
- 内层多元素数组渲染并行组

工作流详情返回后，前端应消费后端装配好的节点定义信息，不自己猜结构。

## 3. 页面边界

### 3.1 节点设计页负责

- 节点资产本身
- 节点字段契约
- 节点推荐模板

### 3.2 工作流设计页负责

- 引用了哪些节点
- 节点层级和顺序
- 并行组摆放

## 4. 禁止事项

- 不要在工作流页里继续编辑节点输入字段或输出字段
- 不要在工作流页里提交节点定义字段
- 不要继续依赖“工作流节点副本列表”作为主要保存结构
- 不要兼容上一轮“节点表双语义”前端口径

## 5. 依赖

- 依赖后端提供独立节点设计接口
- 依赖后端提供工作流模板 `meta.nodeGraph` 的读写契约
- 依赖后端在工作流详情中返回 `nodeGraph` 对应节点定义的装配结果

## 6. 交付输出

1. 已改文件清单
2. 节点设计页入口与关键交互说明
3. 工作流页如何编辑和保存 `nodeGraph`
4. 与后端契约对齐情况
5. 未解决阻塞项
